WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56951
Web Inspector: Inspector does not show correct transfer size for synchronous requests
https://bugs.webkit.org/show_bug.cgi?id=56951
Summary
Web Inspector: Inspector does not show correct transfer size for synchronous ...
Vsevolod Vlasov
Reported
2011-03-23 12:31:41 PDT
Resolution of
https://bugs.webkit.org/show_bug.cgi?id=56691
caused regression for synchronous requests.
Attachments
Patch
(8.40 KB, patch)
2011-03-23 12:46 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch with test
(10.70 KB, patch)
2011-03-23 12:55 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch with fixed test
(10.65 KB, patch)
2011-03-23 12:57 PDT
,
Vsevolod Vlasov
pfeldman
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch with merge conflicts fixes
(10.81 KB, patch)
2011-03-24 11:36 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-03-23 12:46:45 PDT
Created
attachment 86671
[details]
Patch
WebKit Review Bot
Comment 2
2011-03-23 12:50:59 PDT
Attachment 86671
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/platform/chromium/test_expectations.txt:668: Path does not exist. http/tests/inspector/network/network-size-sync.html [test/expectations] [2] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Vsevolod Vlasov
Comment 3
2011-03-23 12:55:15 PDT
Created
attachment 86673
[details]
Patch with test
Vsevolod Vlasov
Comment 4
2011-03-23 12:57:21 PDT
Created
attachment 86674
[details]
Patch with fixed test
Yury Semikhatsky
Comment 5
2011-03-24 05:49:58 PDT
Comment on
attachment 86674
[details]
Patch with fixed test View in context:
https://bugs.webkit.org/attachment.cgi?id=86674&action=review
> LayoutTests/platform/chromium/test_expectations.txt:668 > +BUG_VSEVIK SKIP : http/tests/inspector/network/network-size-sync.html = FAIL
This new test is skipped on all platform so what's the point in adding it?
Vsevolod Vlasov
Comment 6
2011-03-24 05:54:56 PDT
Comment on
attachment 86674
[details]
Patch with fixed test View in context:
https://bugs.webkit.org/attachment.cgi?id=86674&action=review
>> LayoutTests/platform/chromium/test_expectations.txt:668 >> +BUG_VSEVIK SKIP : http/tests/inspector/network/network-size-sync.html = FAIL > > This new test is skipped on all platform so what's the point in adding it?
It will be enabled once this works in at least one port. The patch for chromium port will follow soon.
WebKit Commit Bot
Comment 7
2011-03-24 11:26:44 PDT
Comment on
attachment 86674
[details]
Patch with fixed test Rejecting
attachment 86674
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-..." exit_code: 2 Last 500 characters of output: bCore/loader/FrameLoader.cpp Hunk #1 succeeded at 1543 (offset 4 lines). Hunk #2 succeeded at 1960 (offset 4 lines). Hunk #3 succeeded at 2816 (offset 6 lines). Hunk #4 succeeded at 3109 (offset 6 lines). patching file Source/WebCore/loader/ResourceLoadNotifier.cpp Hunk #1 succeeded at 152 (offset -2 lines). patching file Source/WebCore/loader/ResourceLoadNotifier.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Pavel Feldman', u'--fo..." exit_code: 1 Full output:
http://queues.webkit.org/results/8233649
Vsevolod Vlasov
Comment 8
2011-03-24 11:36:52 PDT
Created
attachment 86805
[details]
Patch with merge conflicts fixes
WebKit Commit Bot
Comment 9
2011-03-24 14:18:15 PDT
Comment on
attachment 86805
[details]
Patch with merge conflicts fixes Clearing flags on attachment: 86805 Committed
r81897
: <
http://trac.webkit.org/changeset/81897
>
WebKit Commit Bot
Comment 10
2011-03-24 14:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug