2011-03-24  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Inspector does not show correct transfer size for synchronous requests
        https://bugs.webkit.org/show_bug.cgi?id=56951

        Fixed transfer size for synchronous load.

        * http/tests/inspector/network/network-size-sync-expected.txt: Added.
        * http/tests/inspector/network/network-size-sync.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
2011-03-24  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Inspector does not show correct transfer size for synchronous requests
        https://bugs.webkit.org/show_bug.cgi?id=56951

        Fixed transfer size for synchronous load.

        Test: http/tests/inspector/network/network-size-sync.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::willLoadMediaElementURL):
        (WebCore::FrameLoader::commitProvisionalLoad):
        (WebCore::FrameLoader::loadResourceSynchronously):
        (WebCore::FrameLoader::loadedResourceFromMemoryCache):
        * loader/ResourceLoadNotifier.cpp:
        (WebCore::ResourceLoadNotifier::sendRemainingDelegateMessages):
        * loader/ResourceLoadNotifier.h:

Canonical link: https://commits.webkit.org/71707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81897 268f45cc-cd09-0410-ab3c-d52691b4dbfc